--- a/src/pages/welcomePage/WelcomePage.css
+++ b/src/pages/welcomePage/WelcomePage.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: xx-large;
+  font-size: x-large;
   text-align: center;
   height: 100vh;
   box-sizing: border-box;
