--- a/src/components/Session.css
+++ b/src/components/Session.css
@@ -18,10 +18,11 @@
   flex-direction: column;
   align-items: center;
   width: 80%;
+  margin-bottom: 15px;
 }
 
 .detail-open {
-  height: 200px;
+  max-height: 200px;
   transform: translateY(0) scale(1);
   opacity: 1;
   transition: all 1.2s ease;
@@ -30,7 +31,7 @@
 .detail-close {
   opacity: 0.1;
   transform: translateY(-10%) scale(0.1);
-  height: 0;
+  max-height: 0;
   transition: all 1.2s ease;
 }
 
